force-app/main/default/objects/Consent__c/fields/EffectiveFrom__c.field-meta.xml
<CustomField>
    <fullName>EffectiveFrom__c</fullName>
    <label>Effective From</label>
    <type>Date</type>
</CustomField>