force-app/main/default/objects/Consent__c/fields/EffectiveTo__c.field-meta.xml
<CustomField>
    <fullName>EffectiveTo__c</fullName>
    <label>Effective To</label>
    <type>Date</type>
</CustomField>