force-app/main/default/objects/Consent__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <formula>IF(AND(DATEVALUE(NOW()) &gt;= EffectiveFrom__c, DATEVALUE(NOW()) &lt;= EffectiveTo__c), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>