force-app/main/default/objects/Consent__c/fields/LastModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LastModifiedByConsents</relationshipName>
    <type>Lookup</type>
</CustomField>