force-app/main/default/objects/Consent__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Televisit</fullName>
            </value>
            <value>
                <fullName>Document Access</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>