force-app/main/default/objects/Consent__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <label>Scope</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Limited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>